--- a/pagina2.html
+++ b/pagina2.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina 1</title>
+    <title>pagina2</title>
 </head>
 <body>
-    <h1>pagina del sena</h1>
-    <h2>informacion</h2>
+    <h1>comercio y sercio</h1>
 </body>
 </html>
