--- a/gagina1.html
+++ b/gagina1.html
@@ -6,7 +6,7 @@
     <title>pagina 1</title>
 </head>
 <body>
-    <h1>pagina del sena</h1>
+    <h1>Probando las modificaciones lalalal</h1>
     <h2>informacion</h2>
 </body>
 </html>
